# simple-notification-bridge

./: .dockerignore  .env  CLAUDE.md  Dockerfile  LICENSE  README.md  index.html  main.py  post_process.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
