[project]
name = "simple-notification-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "line-bot-sdk>=3.17.1",
    "pydantic-settings==2.6.1",
    "sse-starlette==2.1.3",
    "uvicorn[standard]==0.32.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fix = "ruff format && ruff check --select I --fix && ruff check --fix && pyright"
