[project]
name = "simple-notification-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fix = "ruff format && ruff check --select I --fix && ruff check --fix && pyright"
